trunk/Archive2/97/1a3c52e51f966d/output
+ g++-4.9 -std=c++1y -Wall -Wextra -Wconversion -pedantic -O3 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:17:14: error: default type conversion can't deduce template argument for 'template<class T> Var::operator T() const'
     switch (v)
              ^
